// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementTreeItem renders correctly for a collapsed parent element 1`] = `
<div>
  <div
    class="title  "
    tabindex="0"
  >
    <div
      class="titleIn level0"
    >
      <button
        aria-label="Expand"
        class="collapseButton"
      >
        <i
          class="iconoir-nav-arrow-right "
        />
      </button>
      <i
        class="iconoir-flare shapeIcon"
      />
      <div
        class="titleText"
      >
        <span
          class="text"
          tabindex="0"
        >
          test-element
        </span>
      </div>
      <button
        class="iconButton  small"
      >
        <i
          class="iconoir-more-vert "
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ElementTreeItem renders correctly for a leaf element 1`] = `
<div>
  <div
    class="title  "
    tabindex="0"
  >
    <div
      class="titleIn level0"
    >
      <i
        class="iconoir-flare shapeIcon"
      />
      <div
        class="titleText"
      >
        <span
          class="text"
          tabindex="0"
        >
          test-element
        </span>
      </div>
      <button
        class="iconButton  small"
      >
        <i
          class="iconoir-more-vert "
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ElementTreeItem renders correctly for a parent element 1`] = `
<div>
  <div
    class="title  "
    tabindex="0"
  >
    <div
      class="titleIn level0"
    >
      <button
        aria-label="Collapse"
        class="collapseButton"
      >
        <i
          class="iconoir-nav-arrow-down "
        />
      </button>
      <i
        class="iconoir-flare shapeIcon"
      />
      <div
        class="titleText"
      >
        <span
          class="text"
          tabindex="0"
        >
          test-element
        </span>
      </div>
      <button
        class="iconButton  small"
      >
        <i
          class="iconoir-more-vert "
        />
      </button>
    </div>
  </div>
</div>
`;
